[package]
name = "web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version = "2.0.3", features = ["postgres"]}
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = "0.4.10"
rocket_codegen = "0.4.4"
serde = "1.0.162"
serde_derive = "1.0.156"
serde_json = "1.0.95"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "*"
